# apartment-prices-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/: README.md
conf/base/: catalog.yml  parameters.yml
src/apartment_prices_prediction/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
src/apartment_prices_prediction/pipelines/autogluon_model/: nodes.py  pipeline.py
src/apartment_prices_prediction/pipelines/azure_upload/: nodes.py  pipeline.py
src/apartment_prices_prediction/pipelines/data_processing/: nodes.py  pipeline.py
